Added snaked images

--- a/Snake.html
+++ b/Snake.html
@@ -11,6 +11,10 @@
 	<img id="space" src="img/space.png" />
 	<img id="snake" src="img/snake.png" />
 	<img id="token" src="img/token.png" />
+	<img id="snake_head" src="img/snake_head.png" />
+	<img id="snake_segment" src="img/snake_segment.png" />
+	<img id="snake_corner" src="img/snake_corner.png" />
+	<img id="snake_tail" src="img/snake_tail.png" />
 </div>
 <div id="divGameTable" style="text-align:center;">
 	<div id="divGameStage"></div>
