Added fruits to the game and fixed snake overlap

--- a/Snake.html
+++ b/Snake.html
@@ -15,6 +15,7 @@
 	<img id="snake_segment" src="img/snake_segment.png" />
 	<img id="snake_corner" src="img/snake_corner.png" />
 	<img id="snake_tail" src="img/snake_tail.png" />
+	<img id="apple" src="img/apple.png" />
 </div>
 <div id="divGameTable" style="text-align:center;">
 	<div id="divGameStage"></div>
