Improved and updated a lot. Better art, fixed bugs in moving mechanics, timer and scoreboard

--- a/Snake.html
+++ b/Snake.html
@@ -1,24 +1,58 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Ice Dungeon</title>
-</head>
-<body>
-<script src="js/Controller.js"></script>
-<div id="divGameImg" style="display:none">
-	<img id="wall" src="img/wall.png" />
-	<img id="space" src="img/space.png" />
-	<img id="snake" src="img/snake.png" />
-	<img id="token" src="img/token.png" />
-	<img id="snake_head" src="img/snake_head.png" />
-	<img id="snake_segment" src="img/snake_segment.png" />
-	<img id="snake_corner" src="img/snake_corner.png" />
-	<img id="snake_tail" src="img/snake_tail.png" />
-	<img id="apple" src="img/apple.png" />
-</div>
-<div id="divGameTable" style="text-align:center;">
-	<div id="divGameStage"></div>
-</div>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Snake</title>
+	</head>
+	<body>
+		<script src="js/Controller.js"></script>
+		<div id="divGameImg" style="display:none">
+			<img id="wall" src="img/wall.png" />
+			<img id="space" src="img/space.png" />
+			<img id="snake" src="img/snake.png" />
+			<img id="token" src="img/token.png" />
+			<img id="snake_head" src="img/snake_head.png" />
+			<img id="snake_segment" src="img/snake_segment.png" />
+			<img id="snake_corner" src="img/snake_corner.png" />
+			<img id="snake_tail" src="img/snake_tail.png" />
+			<img id="snake_2_head" src="img/snake_2_head.png" />
+			<img id="snake_2_segment" src="img/snake_2_segment.png" />
+			<img id="snake_2_corner" src="img/snake_2_corner.png" />
+			<img id="snake_2_corner_left" src="img/snake_2_corner_left.png" />
+			<img id="snake_2_corner_right" src="img/snake_2_corner_right.png" />
+			<img id="snake_2_corner_left_moving" src="img/snake_2_corner_left_moving.png" />
+			<img id="snake_2_corner_right_moving" src="img/snake_2_corner_right_moving.png" />
+			<img id="snake_2_tail" src="img/snake_2_tail.png" />
+			<img id="centipede_head" src="img/centipede_head.png" />
+			<img id="centipede_segment" src="img/centipede_segment.png" />
+			<img id="centipede_corner_right" src="img/centipede_corner_right.png" />
+			<img id="centipede_corner_left" src="img/centipede_corner_left.png" />
+			<img id="centipede_tail" src="img/centipede_tail.png" />
+			<img id="apple" src="img/apple.png" />
+			<img id="mouse" src="img/mouse.png" />
+			<img id="grass" src="img/grass.png" />
+			<img id="fence_hor" src="img/fence_hor.png" />
+			<img id="fence_ver" src="img/fence_ver.png" />
+			<img id="fence_ver_bottom" src="img/fence_ver_bottom.png" />
+			<img id="fence_bottom_left" src="img/fence_bottom_left.png" />
+			<img id="fence_bottom_right" src="img/fence_bottom_right.png" />
+			<img id="fence_top_left" src="img/fence_top_left.png" />
+			<img id="fence_top_right" src="img/fence_top_right.png" />
+			<img id="scoreboard-0" src="img/scoreboard-0.png" />
+			<img id="scoreboard-1" src="img/scoreboard-1.png" />
+			<img id="scoreboard-2" src="img/scoreboard-2.png" />
+			<img id="scoreboard-3" src="img/scoreboard-3.png" />
+			<img id="scoreboard-4" src="img/scoreboard-4.png" />
+			<img id="scoreboard-5" src="img/scoreboard-5.png" />
+			<img id="scoreboard-6" src="img/scoreboard-6.png" />
+			<img id="scoreboard-7" src="img/scoreboard-7.png" />
+			<img id="scoreboard-8" src="img/scoreboard-8.png" />
+			<img id="scoreboard-9" src="img/scoreboard-9.png" />
+			<img id="empty_scoreboard" src="img/empty_scoreboard.png" />
+			<img id="empty_timeboard" src="img/empty_timeboard.png" />
+		</div>
+		<div id="divGameTable" style="text-align:center;">
+			<div id="divGameStage"></div>
+		</div>
+	</body>
 </html>
